# basic-neural-net

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
basic_neural_net/: __init__.py  activations.py  layers.py  nn.py
basic_neural_network/: losses.py  nn.py  optimizers.py
examples/: Untitled.ipynb  mnist_example.ipynb
